kubernetes/harbor/harbor-gateway-staging.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: harbor-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-harbor
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: harbor-cert
      hosts:
        - <change-me>
