kubernetes/harbor/harbor-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: harbor
  namespace: infra-harbor
spec:
  hosts:
    - <change-me>
  gateways:
    - istio-system/harbor-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: harbor.infra-harbor.svc.cluster.local
            port:
              number: 80
